--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <section id="projects" class="main special">
         <header class="major">
           <h2><b>MY WORKS</b></h2>
-          <p>I was part of some collaborations, and i worked alone on various different projects.<br />
+          <p>I was part of some collaborations, and I worked alone on various different projects.<br />
             Here's a list of my favorites!</p>
         </header>
 
@@ -222,8 +222,8 @@
               <span class="image-small"><img src="images/escapeearth.png" alt="" /></span>
               <p>
                 This is a project created during the NASA Space Apps Challenge (20-21 October 2018).
-                It's a cross platform application developed using the Flutter Framework. What i did was
-                working on the initial idea, on the code and on the UI. Furthermore, i made the pitch video
+                It's a cross platform application developed using the Flutter Framework. What I did was
+                working on the initial idea, on the code and on the UI. Furthermore, I made the pitch video
                 and PowerPoint presentation.
               </p>
             </div>
@@ -250,14 +250,14 @@
         <h3><b>Fun facts!</b></h3>
         <ul class="facts">
           <li>I like to dress elegantly, every time is possible.</li>
-          <li>I'm part of different groups of developers, especially on Telegram. Here i found some real friends.</li>
-          <li>I can recognize almost any car model i see, and i especially like japanese sport cars.</li>
-          <li>Even if i'm not a boy anymore, i often use my free time to play videogames.</li>
+          <li>I'm part of different groups of developers, especially on Telegram. Here I found some real friends.</li>
+          <li>I can recognize almost any car model I see, and I especially like japanese sport cars.</li>
+          <li>Even if I'm not a boy anymore, I often use my free time to play videogames.</li>
           <li>I collect a lot of things, from coins to stamps to caps.</li>
-          <li>I'm a tech addicted, but also an environment addicted. So i avoid to buy things continuously.</li>
+          <li>I'm a tech addicted, but also an environment addicted. So I avoid to buy things continuously.</li>
           <li>My nickname, minar, comes from a trading card game, and was my first Xbox gamertag back in 2005.</li>
           <li>I used to have a 5000 subscribers YouTube channel. It has been terminated for a reason I never understood.</li>
-          <li>I listen to music of all genres, and i particularly like electronic and classical music.</li>
+          <li>I listen to music of all genres, and I particularly like electronic and classical music.</li>
           <li>I prefer cats over dogs and mountain over sea.</li>
         </ul>
       </section>
@@ -266,7 +266,7 @@
       <section id="infos" class="main special">
         <header class="major">
           <h2><b>SOME NUMBER, AND MY GOAL</b></h2>
-          <p>All i want is to use my natural attitudes to improve a little piece of world.
+          <p>All I want is to use my natural attitudes to improve a little piece of world.
             Work and ambitions are important, but only if you can share your progresses with
             someone you love.</p>
         </header>
@@ -302,9 +302,9 @@
       <section>
         <h2>Why contact me?</h2>
         <!-- A final message for the viewer -->
-        <p>You can contact me for various reasons, and i'll do my best to answer you.
+        <p>You can contact me for various reasons, and I'll do my best to answer you.
           You can do it to ask for assistance with my apps, to suggest improvements, or to give
-          a feedback. i'll also consider offers, eventually!</p>
+          a feedback. I'll also consider offers, eventually!</p>
       </section>
       <section>
         <h2>How to contact me:</h2>
@@ -346,7 +346,7 @@
     birthYear = 1995; // Year of birth
     birthMonth = 2; // Month of birth, without leading zero
     birthDay = 23; // Day of birth, without leading zero
-    experienceStart = 2011; // Year from which the experience starts (e.g. when i wrote my first line of code)
+    experienceStart = 2011; // Year from which the experience starts (e.g. when I wrote my first line of code)
     date = new Date();
     year = date.getFullYear();
     experience = year - experienceStart;
@@ -361,13 +361,13 @@
       year--;
     age = year - birthYear;
     // The initial description. It is meant to be modified freely
-    me = "I'm a " + age + " years old guy, i have many interests and hobbies and a great " +
+    me = "I'm a " + age + " years old guy, I have many interests and hobbies and a great " +
       "propension to <b>create</b>. I worked on software for different platforms and operating systems, " +
       "graphic design, 3d printing and modeling, videomaking, photography, AI, music and more. I also like " + 
       "videogames, cars, sports and philosophy. I became interested in computer science relatively late, " + 
       "at 16, and I started modding games and mobile phones and creating icons and animations. The <b>patience</b> " +
-      "is probably my best quality, and i know how to find the informations to solve the problems i face " +
-      "during my work, usually! Just to mention, i'm a <b>computer engineer</b>, and i can work both " + 
+      "is probably my best quality, and I know how to find the informations to solve the problems I face " +
+      "during my work, usually! Just to mention, I'm a <b>computer engineer</b>, and I can work both " + 
       "alone or in a team.";
 
     // Assign the description to the correct html element, given its id 
